# axon

./: .gitignore  README.md  pyproject.toml
.claude/skills/next-idea/: SKILL.md
.github/workflows/: ci.yml  release.yml
axon/: cli.py  report.py  test_cli.py
axon/export/: composite.py  test_composite_contract.py
conf/model/tcn/: model_bb_tcn_ssl_comp.yaml
docs/: README.md  auto_eq_spectral_mask.md  auto_gain.md  bass_mono.md  loudness_meter.md  lufs_leveler.md  mel_limiter.md  neural_inference_ort.md  rational_a.md  research_buscomp_input_and_crunch_viz.md  research_frequency_buildup_suppression.md  research_harmonic_excitation.md  research_limiter_adaptive_controls.md  spectrum_analyzer.md  true_peak_ceiling.md
docs/deep-dives/: auto-eq.md  bass-mono.md  bus-comp.md  mel-limiter.md  monitoring.md  reverb.md  ssl-channel-eq.md  true-peak-ceiling.md  widener.md
docs/future/: README.md
docs/future/active/: windows-linux-builds.md
docs/future/complete/implemented/: batch1-export-compat.md  mel-limiter-default-gain-staging.md  re-record-bench-baseline.md  saturator-removal-decision.md  ssl-comp-hop-stagger.md
docs/future/complete/not-implemented/: offload-inference-to-worker-thread.md  ort_audio_thread_allocations.md
docs/future/not-started/: adaptive-eq-hf-band-tau.md  batch1-export-compat.md  custom-lstm-controller-cell.md  mel-limiter-default-gain-staging.md  offload-inference-to-worker-thread.md  ort_audio_thread_allocations.md  ort_render_nondeterminism.md  saturator-removal-decision.md  ssl-comp-hop-stagger.md  wire-ssl-eq-colour.md
native/clap/: .gitignore  CMakeLists.txt  build.sh  package_linux.sh  package_windows.py
native/clap/bench/: README.md  axon_bench.cpp  baseline.json  bench_bass_mono.cpp  bench_exciter.cpp  bench_mel_limiter.cpp  bench_reverb.cpp  bench_saturator.cpp  bench_spectral_mask_eq.cpp  bench_true_peak.cpp  bench_widener.cpp  run_bench.py  run_coverage.sh
native/clap/bench/sonic/: analysis.hpp  eq_ctrl.hpp  eq_ctrl_c1.hpp  eq_ctrl_c2.hpp  eq_ctrl_c3.hpp  eq_ctrl_cascade.hpp  harness_auto_eq.cpp  harness_eq_control.cpp  harness_exciter.cpp  harness_harmonics.cpp  signals.hpp
native/clap/cmake/: FetchOnnxRuntime.cmake  FetchPffft.cmake  FetchSndfileWin.cmake  FetchWebView2.cmake  build_config.cmake.in
native/clap/docs/: bus_comp_perf_findings.md  harmonics_spec.md  limiter_algorithm.md  mel_limiter_perf_findings.md  perf_stage_ranking.md  saturator_meter_ort_findings.md  sonic_harness_spec.md  ssl_comp_reexport_handoff.md  ssl_harmonic_training_handoff.md
native/clap/docs/investigations/: README.md  ort_audio_thread_allocations.md  ort_render_nondeterminism.md
native/clap/src/: accelerate_shim.cpp  accelerate_shim.hpp  adaptive_eq.hpp  adaptive_eq_targets.hpp  auto_gain.hpp  axon_gui.h  axon_gui.mm  axon_gui_bridge.hpp  axon_gui_gtk.cpp  axon_gui_js.hpp  axon_gui_stub.cpp  axon_gui_win.cpp  axon_limits.hpp  axon_plugin.cpp  axon_stage_timing.h  bass_mono.hpp  biquad.hpp  coherence_distortion.hpp  composite_meta.cpp  composite_meta.hpp  dyn_module.hpp  exciter.hpp  exciter_spectrum.hpp  iir_filterbank_eq.hpp  k_weighting.hpp  lufs_leveler.cpp  lufs_leveler.hpp  mel_limiter.cpp  mel_limiter.hpp  mel_scale.hpp  meta.cpp  meta.hpp  meter.cpp  meter.hpp  multiband_exciter.hpp  nablafx_plugin.cpp  ort_path.hpp  ort_run_guard.hpp  ort_session.cpp  ort_session.hpp  (+11 more)
native/clap/tests/: test_accelerate_shim.cpp  test_adaptive_eq.cpp  test_auto_gain.cpp  test_autoeq_param_guard.cpp  test_axon_gui_bridge.cpp  test_axon_gui_js.cpp  test_bass_mono.cpp  test_coherence_distortion.cpp  test_composite_meta.cpp  test_composite_meta_validate.cpp  test_control_contract.cpp  test_exciter.cpp  test_grey_dsp.cpp  test_iir_filterbank_eq.cpp  test_mel_limiter.cpp  test_meta.cpp  test_meter.cpp  test_multiband_exciter.cpp  test_nablafx_plugin.cpp  test_ort_session.cpp  test_resource_path.cpp  test_reverb.cpp  test_spectral_mask_eq.cpp  test_ssl_channel_eq.cpp  test_ssl_hop_contract.cpp  test_ssl_hop_stagger.cpp  test_ssl_integration.py  test_tolerance_stages.cpp  test_true_peak.cpp  test_widener.cpp
native/clap/ui/: app.js  gallery.html  index.css  index.html  registry.js
native/clap/ui/modules/: autoeq.js  bassmono.js  buscomp.js  eq.js  limiter.js  reverb.js  widener.js
native/clap/ui/system/: canvas.js  components.css  components.js  loop.js  tokens.css  tokens.js
scripts/: build_axon_mac.sh  cut_release.sh  export_axon.py  gen_target_curves.py  install_axon_mac.sh  install_tone_mac.sh  probe_auto_eq_adaptivity.py  train_auto_eq_musdb_fanout.sh  verify_ssl_comp_model.py
weights/axon_bundle/: axon_meta.json
weights/axon_bundle/auto_eq_bass/: model.onnx  plugin_meta.json
weights/axon_bundle/auto_eq_drums/: model.onnx  plugin_meta.json
weights/axon_bundle/auto_eq_full_mix/: model.onnx  plugin_meta.json
weights/axon_bundle/auto_eq_other/: model.onnx  plugin_meta.json
weights/axon_bundle/auto_eq_vocals/: model.onnx  plugin_meta.json
weights/axon_bundle/ssl_comp/: model.onnx  plugin_meta.json
weights/tone_bundle/: tone_meta.json
